k8s/master.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: pdf-storage-master
    version: master
  name: pdf-storage-master
  namespace: pdf-storage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pdf-storage-master
      version: master
  template:
    metadata:
      labels:
        app: pdf-storage-master
        version: master
      name: pdf-storage-master
    spec:
      containers:
      - image: eu.gcr.io/ptcs-docker-registry/pdf-storage:latest-master
        imagePullPolicy: Always
        name: pdf-storage-master
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: pdf-storage-master
    version: master
  name: pdf-storage-master
  namespace: pdf-storage
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: pdf-storage-master
    version: master

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pdf-storage-ingress
  namespace: pdf-storage
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: pdf-storage-master.protacon.cloud
      http:
        paths:
          - backend:
              serviceName: pdf-storage-master
              servicePort: 80
  tls:
    - hosts:
      - pdf-storage-master.protacon.cloud
      secretName: eventale-crt

---

apiVersion: v1
kind: Service
metadata:
  name: pdf-storage-db
  namespace: pdf-storage
  labels:
    app: pdf-storage-db-master-service
    role: db
spec:
  type: ClusterIP
  clusterIP: "None"
  selector:
    app: pdf-storage-db-master
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      name: db
